[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/achievement_icons/XIcon.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/upheavtt_80.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/Office.gd" type="Script" id=3]

[sub_resource type="Shader" id=16]
code = "shader_type canvas_item;

uniform float value = 1.0;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	if (value != 1.0) {
		if (COLOR.r > 0.3 && COLOR.b > 0.3 && COLOR.g > 0.3) {
			COLOR.rgb = vec3(value);
		}
	}
}"

[sub_resource type="ShaderMaterial" id=17]
shader = SubResource( 16 )
shader_param/value = 1.0

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[node name="OfficeScreen" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="EntireScreen" type="ColorRect" parent="."]
margin_left = -3.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.258824, 0.258824, 0.258824, 1 )

[node name="Top" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 85.0
color = Color( 0.462745, 0.462745, 0.462745, 1 )

[node name="QuitOffice" type="Button" parent="."]
material = SubResource( 17 )
margin_left = 1206.0
margin_top = 16.0
margin_right = 1254.0
margin_bottom = 64.0
rect_scale = Vector2( 1, 1.005 )
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 19 )
custom_styles/focus = SubResource( 20 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 22 )
icon = ExtResource( 1 )
icon_align = 1

[node name="OfficeLabel" type="Label" parent="."]
margin_right = 1280.0
margin_bottom = 81.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 2 )
text = "Office"
align = 1
valign = 1

[connection signal="button_down" from="QuitOffice" to="." method="_on_QuitOffice_button_down"]
[connection signal="mouse_entered" from="QuitOffice" to="." method="_on_QuitOffice_mouse_entered"]
[connection signal="mouse_exited" from="QuitOffice" to="." method="_on_QuitOffice_mouse_exited"]
[connection signal="pressed" from="QuitOffice" to="." method="_on_QuitOffice_pressed"]
